Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7286

QWebView scrolling doesn't clear old elements before painting on top of them

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.3
    • 4.6.1
    • None
    • None
    • 92465142116ed140b4323c4a8f5bc325c45cdccf

      QWebView scrolling doesn't clear old elements before painting on top of them.

      Use attached application to reproduce. Steps:
      1) Launch Webview2 application
      2) Click on here-link
      3) Enter some text in search field
      4) Click the search button
      5) Scroll the screen (assuming your search returned enough hits to make scrollbar appear)
      -> Observe paint problems like in screenshot.

      Happens on both emulator and hardware.

        1. google_red.PNG
          google_red.PNG
          88 kB
        2. screenshot-1.jpg
          screenshot-1.jpg
          177 kB
        3. webview.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0150566 Janne Roine
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes