Inspection changes to "Patch to QTBUG-7286"

QWebView scrolling doesn't clear old elements before painting on top of them.

The bug exists only if web page does not set its backgroung color.
Solution is to set White color as a default color for web page backgrounds.
White color was causing some visibility problem (at least with lineedit) and it was solved by editing ::canDrawThemeBackground

modified: styles/qs60style.cpp